2010-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSLayoutManager_internal.h,
	* Headers/Additions/GNUstepGUI/GSLayoutManager.h,
	* Source/GSLayoutManager.m (-intAttribute:forGlyphAtIndex:)
	(-setIntAttribute:value:forGlyphAtIndex:): Implement glyph
	attribute handling.

2010-12-13 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/NSMenuView.m:
	Prevent trying to retrieve a menuCell that is out of range.

2010-12-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMatrix.m (-setState:atRow:column:): Fix bug where the
	old selected cell wasn't properly deselected when the matrix's
	mode is NSRadioMatrixMode.

2010-12-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSLayoutManager.m (-rectArrayForGlyphRange:...): Clip the
	rectangle computed for the last line to the line fragment's used
	rectangle if the line doesn't end with a newline (or other
	invisible character). This better matches Apple's implementation.

2010-12-07  Riccardo Mottola

	* Images/common_SwitchOff.tiff
	* Images/common_SwitchOn.tiff
	Match NeXT 15x15 dimension and tweak the check alpha.
	
2010-12-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-finishLaunching): Don't make an
	invisible window main window when the application has no main
	window.

2010-12-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-sendEvent:): Allow any window that responds
	YES to -worksWhenModal to become key in a modal session.

2010-12-06  Riccardo Mottola

	* Source/NSWorkspace.m
	* Images/common_Desktop.tiff
	* Images/GNUmakefile
	Added handling of a Desktop icon (and added the icon itself).
	
2010-11-27  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSTableView
	header and view.
	* Source/NSTableView.m: Added call in to drawing methods in 
	GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
